--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Toko Arya Kuat</title>
   </head>
-  <body></body>
+  <body>
+    <h1>ARYA KUAT</h1>
+    <h3>Silahkan pilih produk</h3>
+    <button type="button">Obat Batuk</button>
+    <button type="button">Obat Pilek</button>
+    <button type="button">Obat Demam</button>
+    <button type="button">Obat Sariawan</button>
+    <button type="button">Obat Radang</button>
+    <button type="button">Obat Maag</button>
+    <button type="button">Obat Alergi</button>
+    <button type="button">Vitamin</button>
+    <button type="button">Obat Tetes Mata</button>
+    <button type="button">Obat Nyeri</button>
+
+    <h4>Total Pesanan</h4>
+    <p></p>
+    <input type="button" value="Order" />
+    <input type="button" value="Cancel" />
+  </body>
 </html>
