--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toko Arya Kuat</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <h1>ARYA KUAT</h1>
+  <body class="container">
+    <img class="img" src="aryakuat.png" alt="gay">
+    
+    <h1 class="h1">ARYA KUAT</h1>
     <h3>Silahkan pilih produk</h3>
+    <div class="button">
     <button type="button">Obat Batuk</button>
     <button type="button">Obat Pilek</button>
     <button type="button">Obat Demam</button>
@@ -19,6 +23,7 @@
     <button type="button">Vitamin</button>
     <button type="button">Obat Tetes Mata</button>
     <button type="button">Obat Nyeri</button>
+  </div>
 
     <h4>Total Pesanan</h4>
     <p></p>
